--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@tanstack/react-query": "^5.28.6",
+    "@tanstack/react-query-devtools": "^5.28.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.2",
     "react-spinners": "^0.13.8",
     "styled-components": "^6.1.8"
