--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.28.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-awesome-spinners": "^1.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
