--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.13",
     "@tanstack/react-query": "^5.28.6",
     "@tanstack/react-query-devtools": "^5.28.6",
+    "axios": "^1.6.8",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-awesome-spinners": "^1.3.1",
